AWS-EKS/Microservices-Distributed-Tracing-using-AWS-XRay-on-EKS/kube-manifests/02-Applications/04-NotificationMicroservice-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-microservice
  labels:
    app: notification-restapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-restapp
  template:
    metadata:
      labels:
        app: notification-restapp
    spec:
      containers:
      - name: notification-service
        image: stacksimplify/kube-notifications-microservice:3.0.0-AWS-XRay
        ports:
        - containerPort: 8096
        imagePullPolicy: Always
