AWS-EKS/Microservices-Distributed-Tracing-using-AWS-XRay-on-EKS/kube-manifests/02-Applications/01-MySQL-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: umgmt.czasg4cict9w.us-east-1.rds.amazonaws.com
